# "lib/ChangeLog"
#	$Id: ChangeLog,v 1.67 2010/09/21 00:17:58 fang Exp $

2010-09-14	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-23-string-01-03:
	  libchpfn/conditional.cc: added strcond, documented in texinfo.


2010-09-01	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-23:
	  alternator.hac: comment fix of an HSE, 
		thanks to Carlos Tadeo Ortega Otero.


2010-05-19	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-96:
	  added lib/compat directory for compatibility scripts
		hac_fix_vt.sh: for syntax change of PRS
		upgrade_hacprsim_channel_commands.awk: automatically converts
			legacy prsim channel commands to hacprsim.
	  verilog/wrap_verilog_modules_to_hacprsim.awk:
		added -v output_format option to generate empty HAC
			defproc if requested.


2010-04-29	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-89:
	  support/hac.vim: updated to reflect new embedded #FILE
		delimited tokens %{ and %}

2010-01-29	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-65:
	  lib/alternator.hac: CRITICAL FIX alternator_source_1of2_fast
		did not actually alternate values before!
		Now fixed and simplificied by removing the y variable
		and using mutex-cross-locking in rules for _o.


2010-01-05	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-44:
	  verilog/wrap_verilog_modules_to_hacprsim.awk:
		replace strtonum calls with equivalent "+= 0" (POSIX).


2009-12-11	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-53-scalable-01-01:
	  verilog/wrap_verilog_modules_to_hacprsim.awk:
		fixed parsing of ranges.
		properly parse "strings" now.
		Tested, new test case added to prsim/vpi/parse-test.v
	  vpp.sh: changed single quote protection string


2009-10-30	David Fang	<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-44:
	  verilog/wrap_verilog_modules_to_hacprsim.awk: